actualizacion dashboard sin componentizar

--- a/daw/daw/src/main/resources/static/html/dashboardHotel/gestionGastos/dashboardGastos.html
+++ b/daw/daw/src/main/resources/static/html/dashboardHotel/gestionGastos/dashboardGastos.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel de Control NOMBRE HOTEL</title>
-    <link rel="stylesheet" href="../../css/dashboardHotel.css">
+    <link rel="stylesheet" href="../../../css/dashboardHotel.css">
 </head>
-<body onload="funcionesInicio()">
+<body>
     <header>
         <h1>LOGO/NOMBRE HOTEL</h1>
     </header>
@@ -26,6 +26,6 @@
             <button onsubmit="insertarGasto()">Añadir</button>
         </form>
     </main>
-    <script src="../../js/dashboardHotel/dashboardGastos.js"></script>
+    <script src="../../../js/dashboardHotel/dashboardGastos.js"></script>
 </body>
 </html>
