--- a/daw/daw/src/main/resources/static/html/dashboardHotel/gestionGastos/dashboardGastos.html
+++ b/daw/daw/src/main/resources/static/html/dashboardHotel/gestionGastos/dashboardGastos.html
@@ -14,7 +14,7 @@
     <main>
         <h3>AÑADIR CONSUMO</h3>
         
-        <form method="POST">
+        <form class="insertarGastos" method="POST">
             <label>
                 Concepto
                 <input type="text">
