--- a/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardGestionReservas.html
+++ b/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardGestionReservas.html
@@ -9,7 +9,9 @@
 </head>
 <body onload="funcionesInicioGestionReservas()">
     <header>
-        <h1>LOGO/NOMBRE HOTEL</h1>
+        <img src="../../../img/lineaI.png" alt="linea">
+        <img src="../../../img/logoWeb.png" alt="logo">
+        <img src="../../../img/lineaD.png" alt="linea">
     </header>
 
     <main>
