prueba estilos header

--- a/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardGestionReservas.html
+++ b/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardGestionReservas.html
@@ -8,12 +8,13 @@
     
 </head>
 <body onload="funcionesInicioGestionReservas()">
-    <header>
-        <img src="../../../img/lineaI.png" alt="linea">
-        <img src="../../../img/logoWeb.png" alt="logo">
-        <img src="../../../img/lineaD.png" alt="linea">
+    <header class="bosqueImgContainer">
     </header>
-
+    <header class="logoContainer">
+        <img class="flechaImg" src="../../../img/linea.webp" alt="linea">
+        <img class="logoImg" src="../../../img/logoWeb.png" alt="logo">
+        <img class="flechaImg" src="../../../img/linea.webp" alt="linea">
+    </header>
     <main>
         <h2>GESTIÓN DE RESERVAS</h2>
         
@@ -42,7 +43,7 @@
                                 <span>DNI: </span><span>12345678F</span>
                             </div>
                             <div class="checkin">
-                                <span>OK O BOTON</span>
+                                <span>Check-in </span><span>OK o NO</span>
                             </div>
                         </li>
                         <li class="liReserva">
@@ -53,7 +54,7 @@
                                 <span>DNI: </span><span>12345678F</span>
                             </div>
                             <div class="checkin">
-                                <span>OK O BOTON</span>
+                                <span>Check-in </span><span>OK o NO</span>
                             </div>
                         </li>
                         <li class="liReserva">
@@ -64,7 +65,7 @@
                                 <span>DNI: </span><span>12345678F</span>
                             </div>
                             <div class="checkin">
-                                <span>OK O BOTON</span>
+                                <span>Check-in </span><span>OK o NO</span>
                             </div>
                         </li>
                         <li class="liReserva">
@@ -75,7 +76,7 @@
                                 <span>DNI: </span><span>12345678F</span>
                             </div>
                             <div class="checkin">
-                                <span>OK O BOTON</span>
+                                <span>Check-in </span><span>OK o NO</span>
                             </div>
                         </li>
                     </ul>
@@ -92,7 +93,7 @@
                                 <span>DNI: </span><span>12345678F</span>
                             </div>
                             <div class="checkin">
-                                <span>OK O BOTON</span>
+                                <span>Check-out </span><span>OK o NO</span>
                             </div>
                         </li>
                         <li class="liReserva">
@@ -103,7 +104,7 @@
                                 <span>DNI: </span><span>12345678F</span>
                             </div>
                             <div class="checkin">
-                                <span>OK O BOTON</span>
+                                <span>Check-out </span><span>OK o NO</span>
                             </div>
                         </li>
                         <li class="liReserva">
@@ -114,7 +115,7 @@
                                 <span>DNI: </span><span>12345678F</span>
                             </div>
                             <div class="checkin">
-                                <span>OK O BOTON</span>
+                                <span>Check-out </span><span>OK o NO</span>
                             </div>
                         </li>
                         <li class="liReserva">
@@ -125,7 +126,7 @@
                                 <span>DNI: </span><span>12345678F</span>
                             </div>
                             <div class="checkin">
-                                <span>OK O BOTON</span>
+                                <span>Check-out </span><span>OK o NO</span>
                             </div>
                         </li>
                     </ul>
