--- a/daw/daw/src/main/resources/static/html/webHotel.html
+++ b/daw/daw/src/main/resources/static/html/webHotel.html
@@ -12,10 +12,10 @@
     </header>
 
     <header class="logoCabecera">
-        <img class="lineaCabecera" src="../../../../../../../imagenes/linea.webp" alt="Línea Cabecera">
+        <img class="lineaCabecera" src="../css/imagenes/linea.webp" alt="Línea Cabecera">
         <h1>Aquí va el logo del hotel</h1>
-        <!--<img class="logoHotel" src="../../../../../../../imagenes/logoWeb.png" alt="Logo Hoteles Sostenibles">-->
-        <img class="lineaCabecera" src="../../../../../../../imagenes/linea.webp" alt="Línea Cabecera">
+        <!--<img class="logoHotel" src="../css/imagenes/logoWeb.png" alt="Logo Hoteles Sostenibles">-->
+        <img class="lineaCabecera" src="../css/imagenes/linea.webp" alt="Línea Cabecera">
     </header>
 
 
@@ -34,7 +34,7 @@
                   </div>
 
                 <!--Cierre del calendario-->
-
+                <div class="formularioReserva hidden" >
                 <h3>Formulario Reserva</h3>
                 <label>Nombre <input type="text" name="nombre"/> </label>
                 
@@ -45,7 +45,7 @@
                 <label>Teléfono <input type="text" name="telefono"/> </label>
                 
                 <button class="botonEnviarFormulario">Enviar</button>  
-
+                </div>
             </form>
         </section>
 
@@ -74,13 +74,13 @@
 
             <article class="footerIconos" >
                 <div class="footerImagen">
-                    <img class="iconos" src="../../../../../../../imagenes/instagram.png" alt="logo instagram">
+                    <img class="iconos" src="../css/imagenes/instagram.png" alt="logo instagram">
                 </div>
                 <div class="footerImagen">
-                    <img class="iconos" src="../../../../../../../imagenes/Facebook.png" alt="logo facebook">
+                    <img class="iconos" src="../css/imagenes/Facebook.png" alt="logo facebook">
                 </div>
                 <div class="footerImagen">
-                    <img class="iconos" src="../../../../../../../imagenes/logoTwiter.png" alt="logo X">
+                    <img class="iconos" src="../css/imagenes/logoTwiter.png" alt="logo X">
                 </div>
             </article>
 
