--- a/daw/daw/src/main/resources/static/html/dashboardHotel/gestionGastos/dashboardGastos.html
+++ b/daw/daw/src/main/resources/static/html/dashboardHotel/gestionGastos/dashboardGastos.html
@@ -7,23 +7,30 @@
     <link rel="stylesheet" href="../../../css/dashboardHotel.css">
 </head>
 <body>
-    <header>
-        <h1>LOGO/NOMBRE HOTEL</h1>
+    <header class="logoContainer">
+        <img class="flechaImg" src="../../../img/linea.webp" alt="linea">
+        <!-- <img class="logoImg" src="../../../img/logoWeb.png" alt="logo"> -->
+        <h1>AQUÍ VA LOGO HOTEL</h1>
+        <img class="flechaImg" src="../../../img/linea.webp" alt="linea">
     </header>
 
     <main>
         <h3>AÑADIR CONSUMO</h3>
         
-        <form class="insertarGastos" method="POST">
-            <label>
+        <form class="insertarGastos">
+            <label class="labelGasto">
                 Concepto
-                <input type="text">
+                <input class="inputGastos" type="text">
             </label>
-            <label>
+            <label class="labelGasto">
                 Precio
-                <input type="text">
+                <input type="text" class="inputGastos">
             </label>
-            <button onsubmit="insertarGasto()">Añadir</button>
+            <label class="labelGasto">
+                Nº Habitación
+                <input type="text" class="inputGastos">
+            </label>
+            <button class="botonAnadirGasto" onsubmit="insertarGasto()">Añadir</button>
         </form>
     </main>
     <script src="../../../js/dashboardHotel/dashboardGastos.js"></script>
