diseños completos panel de control

--- a/daw/daw/src/main/resources/static/html/dashboardHotel/gestionGastos/dashboardGastos.html
+++ b/daw/daw/src/main/resources/static/html/dashboardHotel/gestionGastos/dashboardGastos.html
@@ -9,8 +9,7 @@
 <body>
     <header class="logoContainer">
         <img class="flechaImg" src="../../../img/linea.webp" alt="linea">
-        <!-- <img class="logoImg" src="../../../img/logoWeb.png" alt="logo"> -->
-        <h1>AQUÍ VA LOGO HOTEL</h1>
+        <img class="logoImgFake" src="../../../img/logoFake.png" alt="logo">
         <img class="flechaImg" src="../../../img/linea.webp" alt="linea">
     </header>
 
@@ -33,6 +32,9 @@
             <button class="botonAnadirGasto" onsubmit="insertarGasto()">Añadir</button>
         </form>
     </main>
+    <footer>
+        <p class="copyrigth">Hoteles Sostenibles © 2024 </p>
+    </footer>
     <script src="../../../js/dashboardHotel/dashboardGastos.js"></script>
 </body>
 </html>
