--- a/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardGestionReservas.html
+++ b/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardGestionReservas.html
@@ -10,7 +10,7 @@
 <body onload="funcionesInicioGestionReservas()">
     <header class="logoContainer">
         <img class="flechaImg" src="../../../img/linea.webp" alt="linea">
-        <img class="logoImg" src="../../../img/logoWeb.png" alt="logo">
+        <img class="logoImgFake" src="../../../img/logoFake.png" alt="logo">
         <img class="flechaImg" src="../../../img/linea.webp" alt="linea">
     </header>
     <main>
@@ -90,6 +90,9 @@
             </article>
         </section>
     </main>
+    <footer>
+        <p class="copyrigth">Hoteles Sostenibles © 2024 </p>
+    </footer>
     <script src="../../../js/dashboardHotel/dashboardReserva.js"></script>
 </body>
 </html>
