--- a/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardInfoReserva.html
+++ b/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardInfoReserva.html
@@ -10,8 +10,7 @@
 <body onload="funcionesInicioInfoReserva()">
     <header class="logoContainer">
         <img class="flechaImg" src="../../../img/linea.webp" alt="linea">
-        <!-- <img class="logoImg" src="../../../img/logoWeb.png" alt="logo"> -->
-        <h1>AQUÍ VA LOGO HOTEL</h1>
+        <img class="logoImgFake" src="../../../img/logoFake.png" alt="logo">
         <img class="flechaImg" src="../../../img/linea.webp" alt="linea">
     </header>
 
@@ -81,6 +80,9 @@
         </section>
         
     </main>
+    <footer>
+        <p class="copyrigth">Hoteles Sostenibles © 2024 </p>
+    </footer>
     <script src="../../../js/dashboardHotel/dashboardReserva.js"></script>
 </body>
 </html>
