Carga informacion reserva y guardar imagen en bbdd

--- a/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardGestionReservas.html
+++ b/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardGestionReservas.html
@@ -20,9 +20,10 @@
             <article class="inputContainer">
                 <div>
                     <input class="inputNumReserva" type="text" placeholder="nº reserva">
-                    <button class="botonBuscar" onclick="cargarGestionReserva()">Buscar</button>
+                    <button class="botonBuscar" onclick="obtenerInfoReserva()">Buscar</button>
+                    <p class="aviso"></p>
                 </div>
-    
+                
                 <div>
                     <input class="inputNumHabitacion" type="text" placeholder="nº habitación">
                     <button class="botonBuscar" onclick="cargarGestionGastos()">Buscar</button>
