Carga image dni y estilos contenedor imagen dni

--- a/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardInfoReserva.html
+++ b/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardInfoReserva.html
@@ -50,14 +50,13 @@
                                 </div>
                                 <input class="dniOculto"type="hidden">
                             </div>
-                            <div class="formGuardarDni">
-                                <label>
-                                    Cargar Imagen
-                                    <input class="imagenDni" type="file">
-                                    <button type="button" onclick="guardarDni()">Subir</button>
-                                </label>
+                            <div class="containerImgDni">
+                                <p class="infoDni"></p>
+                                <img class="imgDni" src="" alt="imgDni">
+                                <input class="imagenDni" type="file">
+                                <button class="botonGuardarDni" type="button" onclick="guardarDni()">Guardar/Actualizar DNI</button>
                             </div>
-                            <img class="imgDni" src="" alt="imgDni">
+                            
                         </li>
                     </ul>
                 </article>
