cambiar ul por tablas de entrad y salida y cambiar varios estilos

--- a/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardGestionReservas.html
+++ b/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardGestionReservas.html
@@ -33,41 +33,24 @@
             <article class="articleComponenteContainer">
                 <article class="articleComponente">
                     <h3>ENTRADAS <span class="spanFecha"></span></h3>
-                    <ul class="ulCheckin">
-                        <li class="liReserva">
-                            <span>Nº Reserva</span><span>DNI</span><span>Check-in</span>
-                        </li>
-                       
-                    </ul>
+                    <table class="tableEntradas">
+                        <tr>
+                            <th>Nº Reserva</th>
+                            <th>DNI</th>
+                            <th>Check-in</th>
+                        </tr>  
+                    </table>
                 </article>
-                
+
                 <article class="articleComponente">
                     <h3>SALIDAS <span class="spanFecha"></span></h3>
-                    <ul class="ulCheckout">
-                        <li class="liReserva">
-                            <span>Nº Reserva</span><span>DNI</span><span>Check-out</span>
-                        </li>
-                        <li class="liReserva">
-                            <p>123456</p>
-                            <p class="parrafoDNI">12345678F</p>
-                            <button class="checkoutState r123456" type="button" onclick="checkoutRealizado(this)"></button>
-                        </li>
-                        <li class="liReserva">
-                            <p>123456</p>
-                            <p class="parrafoDNI">12345678F</p>
-                            <button class="checkoutState r123456" type="button" onclick="checkoutRealizado(this)"></button>
-                        </li>
-                        <li class="liReserva">
-                            <p>123456</p>
-                            <p class="parrafoDNI">12345678F</p>
-                            <button class="checkoutState r123456" type="button" onclick="checkoutRealizado(this)"></button>
-                        </li>
-                        <li class="liReserva">
-                            <p>123456</p>
-                            <p class="parrafoDNI">12345678F</p>
-                            <button class="checkoutState r123456" type="button" onclick="checkoutRealizado(this)"></button>
-                        </li>
-                    </ul>
+                    <table class="tableSalidas">
+                        <tr>
+                            <th>Nº Reserva</th>
+                            <th>DNI</th>
+                            <th>Check-out</th>
+                        </tr>  
+                    </table>
                 </article>
             </article>
         </section>
