Preparacion envio datos a back

--- a/daw/daw/src/main/resources/static/html/dashboardHotel/login/login.html
+++ b/daw/daw/src/main/resources/static/html/dashboardHotel/login/login.html
@@ -17,14 +17,15 @@
         <form class="formLogin">
             <label class="labelLogin">
                 Usuario
-                <input class="inputLogin" type="text">
+                <input class="inputLogin usuario" type="text">
             </label>
             <label class="labelLogin">
                 Contraseña
-                <input class="inputLogin" type="password">
+                <input class="inputLogin contrasena" type="password">
             </label>
-            <button class="botonLogin">Acceder</button>
+            <button type="button" onclick="validarUsuario()"class="botonLogin">Acceder</button>
         </form>
+        <p class="aviso"></p>
     </main>
     <footer>
         <p class="copyrigth">Hoteles Sostenibles © 2024 </p>
