--- a/daw/daw/src/main/resources/static/html/dashboardHotel/login/login.html
+++ b/daw/daw/src/main/resources/static/html/dashboardHotel/login/login.html
@@ -17,11 +17,11 @@
         <form class="formLogin">
             <label class="labelLogin">
                 Usuario
-                <input class="inputLogin usuario" type="text">
+                <input id="usuario" class="inputLogin" type="text">
             </label>
             <label class="labelLogin">
                 Contraseña
-                <input class="inputLogin contrasena" type="password">
+                <input id="contrasena" class="inputLogin" type="password">
             </label>
             <button type="button" onclick="validarUsuario()"class="botonLogin">Acceder</button>
         </form>
