--- a/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardInfoReserva.html
+++ b/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardInfoReserva.html
@@ -88,7 +88,7 @@
                             <button class="checkinState r123456" type="button" ></button>
                         </li>
                     </ul>
-                    <button class="botonVolverInicio" >Volver al incio</button>
+                    <button class="botonVolverInicio" type="button" onclick="volverInicio()">Volver al incio</button>
                 </article>
         </section>
         
