Cambios para video test

--- a/daw/daw/src/main/resources/static/html/webHotel.html
+++ b/daw/daw/src/main/resources/static/html/webHotel.html
@@ -38,7 +38,7 @@
             <section class="formularioReserva hidden" >
                 <h3>Haz tu reserva</h3>
             
-                <div class="divFechaEntrada"><span>Fecha entrada: </span> <input class="fechaEntrada" type="text"  readonly /></div> 
+                <div class="hidden divFechaEntrada"><span>Fecha entrada: </span> <input class="fechaEntrada" type="text"  readonly /></div> 
                 <div class="hidden divFechaSalida"><span>Fecha salida: </span> <input class="fechaSalida" type="text"  readonly /></div>
                 
                 <p>Precio por noche 50€ </p> 
