Añadido calculo total y actualizar pago

--- a/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardInfoReserva.html
+++ b/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardInfoReserva.html
@@ -71,8 +71,8 @@
                     </table>
                     <table>
                         <tr>
-                            <td>Total a pagar <span class="totalGasto">200</span></td>
-                            <td>Pagado <button class="checkinState r123456" type="button" ></button></td>
+                            <td>Total a pagar <span class="totalGasto"></span></td>
+                            <td>Pagado <button class="checkinState botonPagado" type="button" onclick="actualizarPago()"></button></td>
                         </tr>
                     </table>
                     <button class="botonVolverInicio" type="button" onclick="volverInicio()">Volver al incio</button>
