Añadida asignacion de habitacion

--- a/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardGestionReservas.html
+++ b/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardGestionReservas.html
@@ -21,12 +21,13 @@
                 <div>
                     <input class="inputNumReserva" type="text" placeholder="nº reserva">
                     <button class="botonBuscar" onclick="obtenerInfoReserva()">Buscar</button>
-                    <p class="aviso"></p>
+                    <p class="aviso aviso1"></p>
                 </div>
                 
                 <div>
                     <input class="inputNumHabitacion" type="text" placeholder="nº habitación">
-                    <button class="botonBuscar" onclick="cargarGestionGastos()">Buscar</button>
+                    <button class="botonBuscar" onclick="obtenerInfoPorHabitacion()">Buscar</button>
+                    <p class="aviso aviso2"></p>
                 </div>
             </article>
             
