--- a/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardInfoReserva.html
+++ b/daw/daw/src/main/resources/static/html/dashboardHotel/gestionReserva/dashboardInfoReserva.html
@@ -62,7 +62,7 @@
                 </article>
 
                 <article class="articleComponente">
-                    <h3>GASTOS HABITACIÓN <span class="spanNumHabitacion">55</span></h3>
+                    <h3>GASTOS HABITACIÓN</h3>
                     <table class="tableGastos">
                         <tr class="primeraFila">
                             <th>Consumo</th>
