Añadidas mejoras antes del merge a main

--- a/daw/daw/src/main/resources/static/html/dashboardHotel/gestionGastos/dashboardGastos.html
+++ b/daw/daw/src/main/resources/static/html/dashboardHotel/gestionGastos/dashboardGastos.html
@@ -29,6 +29,7 @@
                 Nº Habitación
                 <input id="habitacion" type="number" class="inputGastos" min="1" value="1">
             </label>
+            <p class="mensajeGasto aviso"></p>
             <button class="botonAnadirGasto" type="button" onclick="insertarGasto()">Añadir</button>
         </form>
     </main>
