--- a/daw/daw/src/main/resources/static/html/landing.html
+++ b/daw/daw/src/main/resources/static/html/landing.html
@@ -34,7 +34,7 @@
             </section>
 
             <section class="mainItems" >
-                <h3> ¿Hablamos? </h3>c
+                <h3> ¿Hablamos? </h3>
                 <form  class="mainFormulario" onsubmit="contactar(event)" >
                     <label>Nombre
                         <input type="text" class="nombre" >
